Firefox Pedigree Alignment Fix

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: AHW Core Theme
 Author: Arabian Horse World
 Author URI: arabianhorseworld.com
 Description: Arabian Horse World core theme powering AHW client sites
-Version: 1.1
+Version: 1.2
 */
 
 *,
@@ -1704,6 +1704,7 @@ table.sire {
 .table-details table {
 	width: 100%;
 	min-height: 400px;
+	height: 400px;
 	table-layout: fixed;
 }
 .table-details table tr td {
